# slack-code

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
crates/slack-code/: Cargo.toml
crates/slack-code-common/: Cargo.toml
crates/slack-code-common/src/: config.rs  error.rs  ipc.rs  lib.rs  session.rs
crates/slack-code-daemon/: Cargo.toml
crates/slack-code-daemon/src/: daemon.rs  ipc.rs  lib.rs  session.rs  slack.rs
crates/slack-code-hook/: Cargo.toml
crates/slack-code-hook/src/: main.rs
crates/slack-code-tui/: Cargo.toml
crates/slack-code-tui/src/: app.rs  events.rs
crates/slack-code-tui/src/ui/: config.rs  logs.rs  mod.rs  sessions.rs
crates/slack-code/src/: cli.rs  main.rs  setup.rs
scripts/: install.sh
