[package]
name = "slack-code-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
slack-code-common = { workspace = true }
tokio = { workspace = true }
slack-morphism = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
interprocess = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
daemonize = { workspace = true }
nix = { workspace = true }
http = { workspace = true }
