[package]
name = "slack-code-hook"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "slack-code-hook"
path = "src/main.rs"

[dependencies]
slack-code-common = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
interprocess = { workspace = true }
